<resources>
    <string name="app_name">TellaText</string>
    <string name="sent_a_text">sent a text</string>
    <string name="unknown">Unknown</string>
    <string name="listen">LISTEN</string>
    <string name="ignore">IGNORE</string>
    <string name="call">CALL</string>
    <string name="respond">RESPOND</string>
    <string name="description">TellaText will run in the background monitoring for incoming text messages</string>
    <string name="warning_permission">We can\'t function properly without granting all permissions</string>
    <string name="status_disabled">Status: DISABLED</string>
    <string name="status_enabled">Status: ENABLED</string>
    <string name="nothing_found">No text found</string>
    <string name="playing">Playing</string>
    <string name="msg_too_long">Message too long</string>
    <string name="text">TEXT</string>
    <string name="back">BACK</string>
</resources>
