<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497" />

    <TextView
            android:text="@string/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFF"
            android:id="@+id/textView3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" />

    <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_enable"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_defaultColor="#00C853"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_radius="30dp"
            fancy:fb_text="ENABLE"
            fancy:fb_textSize="40sp"
            fancy:fb_textColor="@color/colorPrimaryDark"
            android:onClick="enableMonitor"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="81dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="80dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_disable"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_defaultColor="#DD2C00"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_radius="30dp"
            fancy:fb_text="DISABLE"
            fancy:fb_textSize="40sp"
            fancy:fb_textColor="@color/colorPrimaryDark"
            android:onClick="disableMonitor"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_enable"
            app:layout_constraintStart_toStartOf="@+id/btn_enable" app:layout_constraintEnd_toEndOf="@+id/btn_enable"/>
    <TextView
            android:text="@string/status_disabled"
            android:id="@+id/txt_status"
            android:textColor="#DD2C00"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_disable" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>